--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,17 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": ">=7.1.3",
+        "php": ">=7.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
-        "symfony/yaml": "4.4.*"
-    },
-    "require-dev": {
+        "symfony/yaml": "4.4.*",
+        "ext-curl": "*",
+        "ext-json": "*"
     },
     "config": {
         "allow-plugins": {
