--- a/composer.json
+++ b/composer.json
@@ -4,15 +4,29 @@
     "require": {
         "php": ">=7.3",
         "ext-ctype": "*",
+        "ext-curl": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
+        "doctrine/doctrine-bundle": "^2.5",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.11",
+        "friendsofsymfony/oauth-server-bundle": "dev-master",
+        "friendsofsymfony/rest-bundle": "^3.3",
+        "friendsofsymfony/user-bundle": "^2.2",
+        "jms/serializer-bundle": "^4.0",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
+        "symfony/expression-language": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
-        "symfony/yaml": "4.4.*",
-        "ext-curl": "*",
-        "ext-json": "*"
+        "symfony/proxy-manager-bridge": "4.4.*",
+        "symfony/security-bundle": "4.4.*",
+        "symfony/serializer": "4.4.*",
+        "symfony/swiftmailer-bundle": "^3.5",
+        "symfony/validator": "4.4.*",
+        "symfony/yaml": "4.4.*"
     },
     "config": {
         "allow-plugins": {
@@ -62,5 +76,13 @@
             "allow-contrib": false,
             "require": "4.4.*"
         }
+    },
+    "require-dev": {
+        "symfony/debug-bundle": "4.4.*",
+        "symfony/maker-bundle": "^1.37",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/stopwatch": "4.4.*",
+        "symfony/var-dumper": "4.4.*",
+        "symfony/web-profiler-bundle": "4.4.*"
     }
 }
