--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,11 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+fos_oauth_server_token:
+  resource: "@FOSOAuthServerBundle/Resources/config/routing/token.xml"
+
+fos_oauth_server_authorize:
+  resource: "@FOSOAuthServerBundle/Resources/config/routing/authorize.xml"
+
+fos_user_register:
+  resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
