--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "friendsofsymfony/rest-bundle": "^3.3",
         "friendsofsymfony/user-bundle": "^2.2",
         "jms/serializer-bundle": "^4.0",
+        "nelmio/api-doc-bundle": "^4.8",
         "sensio/framework-extra-bundle": "^6.2",
+        "symfony/asset": "4.4.*",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/expression-language": "4.4.*",
@@ -25,6 +27,7 @@
         "symfony/security-bundle": "4.4.*",
         "symfony/serializer": "4.4.*",
         "symfony/swiftmailer-bundle": "^3.5",
+        "symfony/twig-bundle": "4.4.*",
         "symfony/validator": "4.4.*",
         "symfony/yaml": "4.4.*"
     },
