--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,10 @@ security:
                 check_path: /oauth/v2/auth_login_check
                 login_path: /oauth/v2/auth_login
                 use_referer: true
+
+        api_doc:
+            pattern: ^/api/doc
+            security: false
         api:
             pattern:    ^/
             fos_oauth:  true
